--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,9 +1,13 @@
+:root {
+    --color-primary: rgb(232, 227, 255);
+}
+
 html {
     height: 100%;
 }
 
 body {
-    background: rgb(232, 227, 255);
+    background: var(--color-primary);
     font-size: 20px;
     margin: 0;
     min-height: 100%;
@@ -63,7 +67,7 @@ h1 {
 
 .start-game-modal {
     background: darkblue;
-    border: 4px solid rgb(232, 227, 255);
+    border: 4px solid var(--color-primary);
     border-radius: 20px;
     color: white;
     left: 50%;
@@ -72,23 +76,79 @@ h1 {
     top: 50%;
     transform: translate(-50%, -50%) scale(1);
     transition: 0.3s ease-in-out;
-    width: 1200px;
+    max-width: 1200px;
     z-index: 1;
 }
 
 .rules {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-}
-
-.rules li {
-    font-size: 24px;
 }
 
 .modal-image {
     width: 300px;
     display: inline-block;
+}
+
+.modal-btn {
+    margin: 40px auto 20px;
+    display: block;
+    font-size: 1.2rem;
+    cursor: pointer;
+    color: var(--color-primary);
+    border: var(--color-primary) 0.25em solid;
+    text-decoration: none;
+    padding: 0.25em 1.25em;
+    border-radius: 0.25em;
+    background: darkblue;
+    text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3),
+    0 0 0.45em var(--color-primary);
+    box-shadow: inset 0 0 0.5em 0 var(--color-primary), 0 0 0.5em 0 var(--color-primary);
+    position: relative;
+    transition: background-color 0.3s;
+}
+
+.modal-btn::before {
+    pointer-events: none;
+    content: '';
+    position: absolute;
+    background: var(--color-primary);
+    top: 120%;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    transform: perspective(1em) rotateX(40deg) scale(1, 0.35);
+    filter: blur(1em);
+    opacity: 0.7;
+}
+
+.modal-btn::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    opacity: 0;
+    box-shadow: 0 0 1em 0.5em var(--color-primary);
+    transition: all 0.3s;
+}
+
+.modal-btn:hover, .modal-btn:focus {
+    background: var(--color-primary);
+    color: darkblue;
+    text-shadow: none;
+}
+
+.modal-btn:hover::before,
+.modal-btn:focus::before {
+    opacity: 1;
+}
+
+.modal-btn:hover::after,
+.modal-btn:focus::before {
+    opacity: 1;
 }
 
 .overlay {
@@ -149,5 +209,5 @@ footer p {
 
 .github-link i:hover {
     transform: scale(1.2);
-    color: rgb(232, 227, 255);
+    color: var(--color-primary);
 }
