--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -91,7 +91,7 @@ h1 {
     display: inline-block;
 }
 
-.modal-btn {
+.btn {
     margin: 40px auto 20px;
     display: block;
     font-size: 1.2rem;
@@ -109,7 +109,7 @@ h1 {
     transition: background-color 0.3s;
 }
 
-.modal-btn::before {
+.btn::before {
     pointer-events: none;
     content: '';
     position: absolute;
@@ -123,7 +123,7 @@ h1 {
     opacity: 0.7;
 }
 
-.modal-btn::after {
+.btn::after {
     content: '';
     position: absolute;
     top: 0;
@@ -135,19 +135,19 @@ h1 {
     transition: all 0.3s;
 }
 
-.modal-btn:hover, .modal-btn:focus {
+.btn:hover, .btn:focus {
     background: var(--color-primary);
     color: darkblue;
     text-shadow: none;
 }
 
-.modal-btn:hover::before,
-.modal-btn:focus::before {
+.btn:hover::before,
+.btn:focus::before {
     opacity: 1;
 }
 
-.modal-btn:hover::after,
-.modal-btn:focus::before {
+.btn:hover::after,
+.btn:focus::before {
     opacity: 1;
 }
 
