--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -65,7 +65,7 @@ h1 {
 
 /* Modals and modal content */
 
-.start-game-modal {
+.start-game-modal.open {
     background: darkblue;
     border: 4px solid var(--color-primary);
     border-radius: 20px;
@@ -75,9 +75,13 @@ h1 {
     position: fixed;
     top: 50%;
     transform: translate(-50%, -50%) scale(1);
-    transition: 0.3s ease-in-out;
+    transition: transform 0.3s;
     max-width: 1200px;
     z-index: 1;
+}
+
+.start-game-modal {
+    transform: scale(0);
 }
 
 .rules {
@@ -106,7 +110,7 @@ h1 {
     0 0 0.45em var(--color-primary);
     box-shadow: inset 0 0 0.5em 0 var(--color-primary), 0 0 0.5em 0 var(--color-primary);
     position: relative;
-    transition: background-color 0.3s;
+    transition: background-color 0.5s;
 }
 
 .btn::before {
@@ -132,7 +136,7 @@ h1 {
     left: 0;
     opacity: 0;
     box-shadow: 0 0 1em 0.5em var(--color-primary);
-    transition: all 0.3s;
+    transition: all 0.5s;
 }
 
 .btn:hover, .btn:focus {
@@ -151,7 +155,7 @@ h1 {
     opacity: 1;
 }
 
-.overlay {
+.overlay.open {
     position: absolute;
     top: 0;
     left: 0;
@@ -161,6 +165,11 @@ h1 {
     width: 100%;
     background-color: #000;
     opacity: 0.5;
+    transition: opacity 0.3s;
+}
+
+.overlay {
+    opacity: 0;
 }
 
 h2 {
