--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,9 +17,62 @@ body {
 
 /* Main UI */
 
+.btn-container {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.btn--dark {
+    margin: 20px;
+    display: block;
+    font-size: 1.2rem;
+    cursor: pointer;
+    color: darkblue;
+    border: darkblue 0.125em solid;
+    text-decoration: none;
+    padding: 0.25em 1.25em;
+    border-radius: 0.25em;
+    background: var(--color-primary);
+    text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3),
+    0 0 0.45em var(--color-primary);
+    box-shadow: inset 0 0 0.25em 0 darkblue, 0 0 0.25em 0 darkblue;
+    position: relative;
+    transition: background-color 0.5s;
+    width: 200px;
+}
+
+.btn--dark::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    opacity: 0;
+    box-shadow: 0 0 1em 0.5em darkblue;
+    transition: all 0.5s;
+}
+
+.btn--dark:hover, .btn--dark:focus {
+    background: darkblue;
+    color: var(--color-primary);
+    text-shadow: none;
+}
+
+.btn--dark:hover::before,
+.btn--dark:focus::before {
+    opacity: 1;
+}
+
+.btn--dark:hover::after,
+.btn--dark:focus::before {
+    opacity: 1;
+}
+
 h1 {
     text-align: center;
     font-size: 50px;
+    margin-top: 0;
 }
 
 .selections {
@@ -64,6 +117,12 @@ h1 {
 }
 
 /* Modals and modal content */
+
+h2 {
+    text-align: center;
+    color: white;
+    margin-top: 0;
+}
 
 .start-game-modal.open {
     background: darkblue;
@@ -170,12 +229,6 @@ h1 {
 
 .overlay {
     opacity: 0;
-}
-
-h2 {
-    text-align: center;
-    color: white;
-    margin-top: 0;
 }
 
 .icon {
