--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -250,8 +250,38 @@ h2 {
     font-size: 120%;
 }
 
-.end-game-modal {
+.game-scores-modal {
     transform: scale(0);
+}
+
+.game-scores-modal.open {
+    background: darkblue;
+    border: 4px solid var(--color-primary);
+    border-radius: 20px;
+    color: white;
+    left: 50%;
+    padding: 40px;
+    position: fixed;
+    top: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    transition: transform 0.3s;
+    max-width: 1200px;
+    z-index: 1;
+}
+
+.game-scores {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.player-game-score {
+    color: rgb(1, 207, 1);
+}
+
+.computer-game-score {
+    color: red;
 }
 
 /* Footer */
