--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -273,7 +273,8 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 10px;
+    gap: 60px;
+    font-size: 50px;
 }
 
 .player-game-score {
