--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,6 +15,12 @@ body {
     flex-direction: column;
 }
 
+@media screen and (max-width: 1024px) {
+    body {
+        font-size: 16px;
+    }
+}
+
 /* Main UI */
 
 .btns {
@@ -178,6 +184,96 @@ h1 {
     opacity: 1;
 }
 
+@media screen and (max-width: 1024px) {
+    .btn--reset, .btn--dark {
+        margin: 16px;
+        font-size: 1rem;    
+        padding: 0.2em 1em; 
+        width: 160px;
+    }
+
+    h1 {
+        font-size: 40px;
+    }
+
+    .selection {
+        font-size: 80px;
+        margin: 0 16px;
+    }
+
+    .scores {
+        font-size: 24px;
+        margin-top: 24px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .btn--reset, .btn--dark {
+        margin: 12px;
+        padding: 0.2em 0.5em;
+        font-size: 0.8rem;
+        width: 100px;
+    }
+
+    h1 {
+        font-size: 32px;
+    }
+
+    .selection {
+        font-size: 45px;
+        margin: 0;
+    }
+}
+
+@media screen and (max-width: 428px) {
+    .btn--reset, .btn--dark {
+        margin: 8px;
+    }
+
+    h1 {
+        font-size: 24px;
+    }
+
+    .selection {
+        font-size: 36px;
+    }
+
+    .scores {
+        font-size: 20px;
+        margin-top: 20px;
+    }
+
+    .score {
+        margin-left: 0;
+    }
+}
+
+@media screen and (max-width: 376px) {
+    .btns {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .btn--reset {
+        margin: 8px auto;
+    }
+
+    .btn-container {
+        justify-content: center;
+    }
+
+    .selection {
+        font-size: 30px;
+    }
+}
+
+@media screen and (max-width: 324px) {
+    .scores {
+        font-size: 16px;
+        margin-top: 16px;
+    }
+}
+
 /* Modals and modal content */
 
 h2 {
@@ -191,18 +287,18 @@ h2 {
     border: 4px solid var(--color-primary);
     border-radius: 20px;
     color: white;
+    display: block;
     left: 50%;
     padding: 20px;
     position: fixed;
     top: 50%;
-    transform: translate(-50%, -50%) scale(1);
-    transition: transform 0.3s;
-    max-width: 1200px;
+    transform: translate(-50%, -50%);
+    width: max-content;
     z-index: 1;
 }
 
 .start-game-modal {
-    transform: scale(0);
+    display: none;
 }
 
 .rules {
@@ -214,6 +310,7 @@ h2 {
 .modal-image {
     width: 300px;
     display: inline-block;
+    padding-left: 20px;
 }
 
 .btn {
@@ -311,7 +408,6 @@ h2 {
     position: fixed;
     top: 50%;
     transform: translate(-50%, -50%) scale(1);
-    transition: transform 0.3s;
     max-width: 1200px;
     z-index: 1;
 }
@@ -342,10 +438,12 @@ footer {
     justify-content: center;
     align-items: center;
     margin-top: auto;
+    padding: 10px;
 }
 
 footer p {
-    margin: 10px 0;
+    margin: 0;
+    text-align: center;
 }
 
 .github-link i {
