--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -21,6 +21,12 @@ body {
     }
 }
 
+@media screen and (max-width: 376px) {
+    body {
+        font-size: 14px;
+    }
+}
+
 /* Main UI */
 
 .btns {
@@ -283,6 +289,11 @@ h2 {
 }
 
 .start-game-modal.open {
+    display: block;
+}
+
+.start-game-modal {
+    display: none;
     background: darkblue;
     border: 4px solid var(--color-primary);
     border-radius: 20px;
@@ -297,14 +308,16 @@ h2 {
     z-index: 1;
 }
 
-.start-game-modal {
-    display: none;
-}
-
 .rules {
     display: flex;
     justify-content: space-around;
     align-items: center;
+}
+
+.rules-list {
+    list-style: none;
+    margin: 0;
+    padding: 20px;
 }
 
 .modal-image {
@@ -395,10 +408,7 @@ h2 {
 }
 
 .game-scores-modal {
-    transform: scale(0);
-}
-
-.game-scores-modal.open {
+    display: none;
     background: darkblue;
     border: 4px solid var(--color-primary);
     border-radius: 20px;
@@ -407,9 +417,13 @@ h2 {
     padding: 40px;
     position: fixed;
     top: 50%;
-    transform: translate(-50%, -50%) scale(1);
+    transform: translate(-50%, -50%);
     max-width: 1200px;
     z-index: 1;
+}
+
+.game-scores-modal.open {
+    display: block;
 }
 
 .game-scores {
@@ -426,6 +440,56 @@ h2 {
 
 .computer-game-score {
     color: red;
+}
+
+@media screen and (max-width: 1024px) {
+    .start-game-modal {
+        padding: 16px;
+    }
+
+    .modal-image {
+        width: 200px;
+        padding-left: 16px;
+    }
+
+    .btn {
+        font-size: 1rem;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .rules {
+        flex-direction: column;
+        max-width: 360px;
+    }
+
+    .modal-image {
+        padding-left: 0;
+    }
+}
+
+@media screen and (max-width: 428px) {
+    .start-game-modal {
+        padding: 10px;
+    }
+
+    .rules {
+        max-width: 300px;
+    }
+
+    .rules-list {
+        padding: 10px;
+    }
+
+    .btn {
+        font-size: 0.8rem;
+    }
+}
+
+@media screen and (max-width: 324px) {
+    .rules {
+        max-width: 240px;
+    }
 }
 
 /* Footer */
