--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -285,7 +285,7 @@ h1 {
 h2 {
     text-align: center;
     color: white;
-    margin-top: 0;
+    margin: 0;
 }
 
 .start-game-modal.open {
@@ -431,6 +431,7 @@ h2 {
     align-items: center;
     gap: 60px;
     font-size: 24px;
+    margin-top: 20px;
 }
 
 .player-game-score {
@@ -482,7 +483,7 @@ h2 {
 
     .btn {
         font-size: 0.8rem;
-        margin-top: 24px;
+        margin-top: 16px;
     }
 
     .game-scores {
