--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,6 +13,8 @@ body {
     min-height: 100%;
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 @media screen and (max-width: 1024px) {
@@ -84,6 +86,29 @@ body {
 .btn--reset:hover::after,
 .btn--reset:focus::before {
     opacity: 1;
+}
+
+.btn--reset > span {
+    position: absolute;
+    background: red;
+    transform: translate(-50%, -50%);
+    pointer-events: none;
+    border-radius: 50%;
+    animation: animate 0.5s linear infinite;
+}
+
+@keyframes animate {
+    0% {
+        width: 0;
+        height: 0;
+        opacity: 0.3;
+    }
+
+    100% {
+        width: 3000px;
+        height: 3000px;
+        opacity: 0;
+    }
 }
 
 .btn--dark {
