--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -326,6 +326,8 @@ h2 {
     transform: translate(-50%, -50%);
     width: max-content;
     z-index: 1;
+    max-height: 100vh;
+    overflow-y: auto;
 }
 
 .start-game-modal p {
