--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -74,19 +74,13 @@ body {
     transition: all 0.5s;
 }
 
-.btn--reset:hover, .btn--dark:focus {
+.btn--reset:hover, .btn--reset:focus {
     background: red;
     color: var(--color-primary);
     text-shadow: none;
 }
 
-.btn--reset:hover::before,
-.btn--reset:focus::before {
-    opacity: 1;
-}
-
-.btn--reset:hover::after,
-.btn--reset:focus::before {
+.btn--reset:hover::after {
     opacity: 1;
 }
 
@@ -153,13 +147,7 @@ body {
     text-shadow: none;
 }
 
-.btn--dark:hover::before,
-.btn--dark:focus::before {
-    opacity: 1;
-}
-
-.btn--dark:hover::after,
-.btn--dark:focus::before {
+.btn--dark:hover::after {
     opacity: 1;
 }
 
@@ -323,7 +311,10 @@ h2 {
     border: 4px solid var(--color-primary);
     border-radius: 20px;
     color: white;
-    display: block;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     left: 50%;
     padding: 20px;
     position: fixed;
@@ -333,12 +324,6 @@ h2 {
     z-index: 1;
     max-height: 100vh;
     overflow-y: auto;
-}
-
-.start-game-modal p {
-    font-style: italic;
-    text-align: center;
-    font-weight: bold;
 }
 
 .start-game-modal {
@@ -365,6 +350,63 @@ h2 {
     width: 300px;
     display: inline-block;
     padding-left: 20px;
+}
+
+.sound-btn {
+    margin: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2rem;
+    cursor: pointer;
+    color: var(--color-primary);
+    border: var(--color-primary) 0.125em solid;
+    text-decoration: none;
+    padding: 0.125em;
+    border-radius: 50%;
+    background: darkblue;
+    text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3),
+    0 0 0.45em var(--color-primary);
+    box-shadow: inset 0 0 0.25em 0 var(--color-primary), 0 0 0.25em 0 var(--color-primary);
+    transition: background-color 0.5s;
+    position: relative;
+    width: 60px;
+    height: 60px;
+}
+
+.sound-btn::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    opacity: 0;
+    border-radius: 50%;
+    box-shadow: 0 0 0.25em 0.25em var(--color-primary);
+    transition: all 0.5s;
+    pointer-events: none;
+}
+
+.sound-btn:hover, .sound-btn:focus {
+    background: var(--color-primary);
+    color: darkblue;
+    text-shadow: none;
+}
+
+.sound-btn:hover::after {
+    opacity: 1;
+}
+
+.sound-btn > i {
+    font-size: 20px;
+}
+
+.start-game-modal p {
+    font-style: italic;
+    text-align: center;
+    font-weight: bold;
+    margin: 0;
 }
 
 .btn {
