--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -362,8 +362,8 @@ h2 {
     color: var(--color-primary);
     border: var(--color-primary) 0.125em solid;
     text-decoration: none;
-    padding: 0.125em;
-    border-radius: 50%;
+    padding: 1em 0.5em;
+    border-radius: 20px;
     background: darkblue;
     text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3),
     0 0 0.45em var(--color-primary);
@@ -382,7 +382,7 @@ h2 {
     bottom: 0;
     left: 0;
     opacity: 0;
-    border-radius: 50%;
+    border-radius: 20px;
     box-shadow: 0 0 0.25em 0.25em var(--color-primary);
     transition: all 0.5s;
     pointer-events: none;
@@ -399,7 +399,18 @@ h2 {
 }
 
 .sound-btn > i {
-    font-size: 30px;
+    font-size: 32px;
+}
+
+@media screen and (max-width: 428px) {
+    .sound-btn {
+        width: 50px;
+        height: 50px;
+    }
+
+    .sound-btn > i {
+        font-size: 16px;
+    }
 }
 
 .start-game-modal p {
