--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -298,7 +298,7 @@ h1 {
     }
 }
 
-/* Rules modal */
+/* Modals and modal content */
 
 h2 {
     text-align: center;
@@ -402,17 +402,6 @@ h2 {
     font-size: 32px;
 }
 
-@media screen and (max-width: 428px) {
-    .sound-btn {
-        width: 50px;
-        height: 50px;
-    }
-
-    .sound-btn > i {
-        font-size: 16px;
-    }
-}
-
 .start-game-modal p {
     font-style: italic;
     text-align: center;
@@ -498,8 +487,6 @@ h2 {
 .overlay {
     display: none;
 }
-
-/* Scores modal */
 
 .game-scores-modal {
     display: none;
@@ -588,6 +575,15 @@ h2 {
     .game-scores {
         flex-direction: column;
         gap: 0;
+    }
+
+    .sound-btn {
+        width: 50px;
+        height: 50px;
+    }
+
+    .sound-btn > i {
+        font-size: 16px;
     }
 }
 
