--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -372,12 +372,6 @@ h1 {
 
 /* Modals and modal content */
 
-h2 {
-    text-align: center;
-    color: white;
-    margin: 0;
-}
-
 .start-game-modal.open {
     background: darkblue;
     border: 4px solid var(--color-primary);
@@ -391,12 +385,18 @@ h2 {
     transform: translate(-50%, -50%);
     width: max-content;
     z-index: 1;
-    max-height: 70vh;
+    max-height: 80vh;
     overflow-y: auto;
 }
 
 .start-game-modal {
     display: none;
+}
+
+h2 {
+    text-align: center;
+    color: white;
+    margin: 0;
 }
 
 .rules {
@@ -417,15 +417,19 @@ h2 {
 
 .modal-image {
     width: 300px;
-    display: inline-block;
     padding-left: 20px;
 }
 
-.start-game-modal.open p {
+.rules-text {
     font-style: italic;
     text-align: center;
     font-weight: bold;
+    padding-top: 20px;
     margin: 0;
+}
+
+.rules-text > p {
+    margin: 0 auto;
 }
 
 .btn {
@@ -489,24 +493,6 @@ h2 {
     opacity: 1;
 }
 
-/* Overlay */
-
-.overlay.open {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: #000;
-    display: block;
-    opacity: 0.5;
-}
-
-.overlay {
-    display: none;
-}
-
 .game-scores-modal {
     display: none;
     background: darkblue;
@@ -546,6 +532,7 @@ h2 {
 @media screen and (max-width: 1024px) {
     .start-game-modal.open {
         padding: 16px;
+        max-height: 70vh;
     }
 
     .modal-image {
@@ -559,9 +546,15 @@ h2 {
 }
 
 @media screen and (max-width: 768px) {
+    .start-game-modal.open p {
+        max-width: 320px;
+    }
+
     .rules {
+        margin: 0 auto;
         flex-direction: column;
         max-width: 360px;
+        text-align: center;
     }
 
     .modal-image {
@@ -571,11 +564,11 @@ h2 {
 
 @media screen and (max-width: 428px) {
     .start-game-modal.open {
-        padding: 10px;
+        padding: 8px;
     }
 
     .start-game-modal.open p {
-        max-width: 340px;
+        padding: 10px;
     }
 
     .rules {
@@ -584,6 +577,10 @@ h2 {
 
     .rules-list {
         padding: 10px;
+    }
+
+    .rules-text {
+        padding-top: 10px;
     }
 
     .btn {
@@ -598,7 +595,15 @@ h2 {
 }
 
 @media screen and (max-width: 376px) {
+    .start-game-modal.open {
+        padding: ;
+    }
+
     .start-game-modal.open p {
+        max-width: 280px;
+    }
+
+    .rules {
         max-width: 280px;
     }
 
@@ -619,6 +624,24 @@ h2 {
     .game-scores-modal {
         padding: 12px;
     }
+}
+
+/* Overlay */
+
+.overlay.open {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #000;
+    display: block;
+    opacity: 0.5;
+}
+
+.overlay {
+    display: none;
 }
 
 /* Footer */
