--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -153,7 +153,7 @@ body {
     opacity: 1;
 }
 
-.sound-btn {
+.btn--sound {
     margin: 20px;
     display: flex;
     justify-content: center;
@@ -175,7 +175,7 @@ body {
     height: 45px;
 }
 
-.sound-btn::after {
+.btn--sound::after {
     content: '';
     position: absolute;
     top: 0;
@@ -189,17 +189,17 @@ body {
     pointer-events: none;
 }
 
-.sound-btn:hover, .sound-btn:focus {
+.btn--sound:hover, .btn--sound:focus {
     background: darkblue;
     color: var(--color-primary);
     text-shadow: none;
 }
 
-.sound-btn:hover::after {
+.btn--sound:hover::after {
     opacity: 1;
 }
 
-.sound-btn > i {
+.btn--sound > i {
     font-size: 0.8rem;
 }
 
@@ -269,7 +269,7 @@ h1 {
         height: 35px;
     }
 
-    .sound-btn {
+    .btn--sound {
         margin: 16px;
         font-size: 1rem;
         width: 35px;
@@ -300,7 +300,7 @@ h1 {
         height: 30px;
     }
 
-    .sound-btn {
+    .btn--sound {
         margin: 12px;
         font-size: 0.8rem;
         width: 30px;
@@ -335,7 +335,7 @@ h1 {
         justify-content: center;
     }
 
-    .sound-btn {
+    .btn--sound {
         margin: 8px;
     }
 
