--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -434,11 +434,10 @@ h2 {
   border: 4px solid var(--color-primary);
   border-radius: 20px;
   color: white;
-  left: 50%;
   padding: 40px;
   position: fixed;
   top: 50%;
-  transform: translate(-50%, -50%);
+  transform: translateY(-50%);
   width: max-content;
   z-index: 1;
 }
