--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -190,6 +190,15 @@ h1 {
   margin-top: 30px;
 }
 
+.player-results,
+.computer-results {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+}
+
 .score {
   font-size: 150%;
   margin-left: 5px;
@@ -304,27 +313,27 @@ h1 {
   }
 }
 
-/* Modals and modal content */
+/* Modals */
 
-.start-game-modal.open {
+.start-game-modal {
+  display: none;
   background: darkblue;
   border: 4px solid var(--color-primary);
   border-radius: 20px;
   color: white;
   display: block;
-  left: 50%;
   padding: 20px;
   position: fixed;
   top: 50%;
-  transform: translate(-50%, -50%);
+  transform: translateY(-50%);
   width: max-content;
   z-index: 1;
   max-height: 80vh;
   overflow-y: auto;
 }
 
-.start-game-modal {
-  display: none;
+.start-game-modal.open {
+  display: block;
 }
 
 h2 {
@@ -461,6 +470,11 @@ h2 {
 
 .computer-game-score {
   color: red;
+}
+
+.player-game-score,
+.computer-game-score {
+  margin-left: 5px;
 }
 
 @media screen and (max-width: 1024px) {
