--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -187,8 +187,7 @@ h1 {
   margin-top: 30px;
 }
 
-.player-results,
-.computer-results {
+.result-column {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -198,11 +197,6 @@ h1 {
 .score {
   font-size: 150%;
   margin-left: 5px;
-  color: rgb(1, 207, 1);
-}
-
-.loss {
-  color: red;
 }
 
 .result {
