Refactor navigation buttons

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -35,11 +35,11 @@ body {
 .btns {
   display: flex;
   justify-content: space-between;
+  width: 100%;
 }
 
 .btn-container {
   display: flex;
-  justify-content: flex-end;
 }
 
 .btn--reset {
