--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -307,7 +307,7 @@ h1 {
 
 /* Modals */
 
-.start-game-modal {
+.rules-modal {
   display: none;
   background: darkblue;
   border: 4px solid var(--color-primary);
@@ -324,7 +324,7 @@ h1 {
   overflow-y: auto;
 }
 
-.start-game-modal.open {
+.rules-modal.open {
   display: block;
 }
 
@@ -470,7 +470,7 @@ h2 {
 }
 
 @media screen and (max-width: 1024px) {
-  .start-game-modal.open {
+  .rules-modal.open {
     padding: 16px;
     max-height: 70vh;
   }
@@ -486,7 +486,7 @@ h2 {
 }
 
 @media screen and (max-width: 768px) {
-  .start-game-modal.open p {
+  .rules-modal.open p {
     max-width: 320px;
   }
 
@@ -503,11 +503,11 @@ h2 {
 }
 
 @media screen and (max-width: 428px) {
-  .start-game-modal.open {
+  .rules-modal.open {
     padding: 8px;
   }
 
-  .start-game-modal.open p {
+  .rules-modal.open p {
     padding: 10px;
   }
 
@@ -535,11 +535,11 @@ h2 {
 }
 
 @media screen and (max-width: 376px) {
-  .start-game-modal.open {
+  .rules-modal.open {
     padding: 5px;
   }
 
-  .start-game-modal.open p {
+  .rules-modal.open p {
     max-width: 280px;
   }
 
@@ -553,7 +553,7 @@ h2 {
 }
 
 @media screen and (max-width: 324px) {
-  .start-game-modal.open p {
+  .rules-modal.open p {
     max-width: 240px;
   }
 
