Adjust CSS to fix UI bug

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -4,8 +4,32 @@
   --color-primary: rgb(232, 227, 255);
 }
 
-html {
+html,
+body {
   height: 100%;
+  margin: 0;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+#root {
+  flex: 1 1 auto;
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex: 1 1 auto;
+  display: flex;
+  flex-direction: column;
+}
+
+#footer-root {
+  flex-shrink: 0;
 }
 
 body {
